deploy/k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: template
  labels:
    app: template
    component: ingress
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    nginx.ingress.kubernetes.io/proxy-body-size: 5m # increases the maximum body size to 5MB from 1 MiB (for file uploads)

spec:
  ingressClassName: nginx
  rules:
    - host: template.oliverrr.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: template-frontend
                port:
                  number: 80
    - host: template-api.oliverrr.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: template-backend
                port:
                  number: 5000
  tls:
    - hosts:
        - template.oliverrr.net
        - template-api.oliverrr.net
      secretName: template-tls
